--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@supabase/supabase-js": "^2.75.0",
+    "firebase": "^11.0.2",
     "expo": "^54.0.13",
     "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
