--- a/game-ttt/package.json
+++ b/game-ttt/package.json
@@ -11,6 +11,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "chess.js": "^1.0.0-beta.8",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
