Ludo redesign(open source), green theme, dice pips

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
-  "functions": {
-    "source": "functions",
-    "predeploy": []
+  "functions": {"source": "functions", "predeploy": []},
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
