--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "firebase": "^11.0.2",
     "expo": "^54.0.13",
     "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "^15.0.7",
+    "expo-device": "~7.0.1",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.12",
     "expo-sensors": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -38,6 +39,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-video": "^3.0.11",
     "expo-web-browser": "~15.0.8",
+    "firebase": "^11.0.2",
     "lottie-react-native": "~7.3.1",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -46,6 +48,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
