Games: stub routes for squareoff, breakout, spaceshooter

--- a/game-ttt/package.json
+++ b/game-ttt/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "spill-ttt",
+  "name": "spill-games",
   "version": "1.0.0",
-  "description": "Tic-Tac-Toe multiplayer for Spill app (open with ?room=)",
+  "description": "Spill games placeholder; use ready-made games at /squareoff, /breakout, /spaceshooter",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "chess.js": "^1.0.0-beta.8",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
-  }
+  "engines": { "node": ">=18" },
+  "dependencies": { "express": "^4.18.2" }
 }
