--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ app-example
 # docs (excluded from repo)
 FIREBASE_SETUP.md
 README.md
+
+# Cloned game repos: ignore their node_modules and .git (we commit source + builds only)
+game-ttt/repos/*/node_modules/
+game-ttt/repos/*/.git/
