--- a/game-ttt/package.json
+++ b/game-ttt/package.json
@@ -8,5 +8,5 @@
     "dev": "node server.js"
   },
   "engines": { "node": ">=18" },
-  "dependencies": { "express": "^4.18.2" }
+  "dependencies": { "express": "^4.18.2", "socket.io": "^4.7.2" }
 }
